tests/ui/parser/byte-literals-2.stderr
error[E0763]: unterminated byte constant
  --> $DIR/byte-literals-2.rs:2:6
   |
LL |     b'a
   |      ^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0763`.
