tests/ui/parser/byte-literals-2.rs
pub fn main() {
    b'a  //~ ERROR unterminated byte constant [E0763]
}
